# i2s-upnp-bridge

./: .gitmodules  CMakeLists.txt  Makefile  README.md  sdkconfig.defaults
components/mongoose/: CMakeLists.txt  component.mk
components/nlohmann-json/: CMakeLists.txt
components/tinyxml2/: CMakeLists.txt
components/warthog/: CMakeLists.txt
main/: CMakeLists.txt  Kconfig  Kconfig.projbuild  http.cpp  http.h  i2s_interface.cpp  i2s_interface.h  json.cpp  json.h  main.c  main.cpp  main.h  nvs_interface.cpp  nvs_interface.h  nvs_parameters.h  ota_interface.cpp  ota_interface.h  ssdp.h  system.cpp  system.h  upnp.h  upnp_control.cpp  upnp_control.h  upnp_renderer.h  utils.h  wav.h  wifi.cpp  wifi.h
main/web_root/: index.html  ota.html
